--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "gm": "^1.25.0",
     "google-it": "^1.6.4",
     "google-play-scraper": "^10.0.0",
-    "google-tts-api": "^2.0.2",
+    "google-tts-api": "^0.0.6",
     "googleapis": "^140.0.1",
     "got": "^14.4.2",
     "heroku-client": "3.1.0",
@@ -95,9 +95,9 @@
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.7.2",
     "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
     "yt-search": "^2.11.1",
     "ytdl-core": "^4.11.5",
-    "youtubedl-core": "^4.11.7",
     "ytsr": "^3.8.4"
   },
   "directories": {
@@ -110,6 +110,5 @@
   "bugs": {
     "url": "https://github.com/MATRIXCODER-0101/MATRIX-AI/issues"
   },
-  "homepage": "https://github.com/MATRIXCODER-0101/MATRIX-AI#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/MATRIXCODER-0101/MATRIX-AI#readme"
 }
