--- a/package.json
+++ b/package.json
@@ -18,90 +18,91 @@
     "bot-md",
     "multi-device"
   ],
-  "author": "LORD DARLVIN.",
+  "author": "MATRIX CODER.",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@bochilteam/scraper": "^5.0.1",
+    "@bochilteam/scraper": "^4.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@google/generative-ai": "^0.16.0",
+    "@google/generative-ai": "^0.1.3",
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.5",
+    "@whiskeysockets/baileys": "^6.2.1",
     "acrcloud": "^1.4.0",
-    "api-dylux": "^1.8.5",
+    "api-dylux": "^1.6.5",
     "aptoide-scraper": "^1.0.1",
-    "archiver": "^7.0.1",
-    "awesome-phonenumber": "^6.10.0",
-    "axios": "^1.7.3",
-    "betabotz-tools": "^0.0.7",
-    "chalk": "^5.3.0",
-    "cheerio": "^1.0.0-rc.12",
+    "archiver": "^6.0.1",
+    "awesome-phonenumber": "^2.64.0",
+    "axios": "^0.24.0",
+    "betabotz-tools": "^0.0.6",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
-    "figlet": "^1.7.0",
-    "file-type": "^19.4.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "formdata-node": "^6.0.3",
+    "figlet": "^1.5.0",
+    "file-type": "^16.5.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "formdata-node": "^4.3.2",
     "fs": "0.0.1-security",
-    "fs-extra": "^11.2.0",
-    "g-i-s": "^2.1.7",
+    "fs-extra": "^11.1.1",
+    "g-i-s": "^2.1.6",
     "gm": "^1.25.0",
-    "google-it": "^1.6.4",
+    "google-it": "^1.6.3",
     "google-play-scraper": "^10.0.0",
     "google-tts-api": "^0.0.6",
-    "googleapis": "^140.0.1",
-    "got": "^14.4.2",
+    "googleapis": "^127.0.0",
+    "got": "^11.8.3",
     "heroku-client": "3.1.0",
     "human-readable": "^0.2.1",
-    "image-size": "^1.1.1",
-    "javascript-obfuscator": "^4.1.1",
-    "jimp": "^0.22.12",
-    "jsdom": "^24.1.1",
-    "lowdb": "^7.0.1",
-    "miniget": "^4.2.3",
-    "moment-timezone": "^0.5.45",
-    "mongoose": "^8.5.2",
-    "mumaker": "^2.0.0",
-    "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2",
+    "image-size": "^1.0.2",
+    "javascript-obfuscator": "^4.0.0",
+    "jimp": "^0.16.1",
+    "jsdom": "^16.4.0",
+    "lowdb": "^2.1.0",
+    "miniget": "^4.2.2",
+    "moment-timezone": "^0.5.34",
+    "mongoose": "^6.12.3",
+    "mumaker": "^1.0.0",
+    "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
     "node-id3": "^0.2.6",
     "node-os-utils": "^1.3.7",
-    "node-webpmux": "^3.2.0",
-    "node-youtube-music": "^0.10.3",
+    "node-webpmux": "^3.1.0",
+    "node-youtube-music": "^0.8.3",
     "object-query-string": "^1.2.0",
-    "openai": "^4.55.3",
+    "openai": "^4.11.1",
     "os": "^0.1.2",
-    "parse-ms": "^4.0.0",
+    "parse-ms": "^2.1.0",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "perf_hooks": "0.0.1",
-    "pino": "^9.3.2",
-    "qrcode": "^1.5.4",
+    "pino": "^7.0.5",
+    "qrcode": "^1.5.3",
     "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
-    "qs": "^6.13.0",
+    "qs": "^6.11.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
-    "rimraf": "^6.0.1",
+    "rimraf": "^3.0.2",
     "scrape-primbon": "^1.1.0",
-    "simple-git": "^3.25.0",
-    "stream": "^0.0.3",
+    "simple-git": "^3.16.1",
+    "stream": "^0.0.2",
     "syntax-error": "*",
     "translate-google-api": "^1.0.4",
     "truecallerjs": "^2.2.0",
     "util": "^0.12.5",
     "xmlbuilder": "^15.1.1",
-    "yargs": "^17.7.2",
+    "yargs": "^17.2.1",
     "youtube-yts": "^2.0.0",
-    "youtubedl-core": "^4.11.7",
-    "yt-search": "^2.11.1",
+    "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5",
+    "youtubedl-core": "^4.11.4",
     "ytsr": "^3.8.4"
   },
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "src": "src"
   },
   "repository": {
     "type": "git",
