--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "MATRIX-AI",
-  "description": "A COOL Whatsapp bot based on Baileysjs with Multi-Device support.",
+  "description": "A Cool Whatsapp bot based on Baileysjs with Multi-Device support.",
   "keywords": ["whatsapp bot"],
   "logo":"https://telegra.ph/file/054986c17ed343e74ca6b.jpg",
   "repository": "https://github.com/MATRIXCODER-0101/MATRIX-AI",
